Added a health news section with 6 clickable cards linking to Mayo Clinic and ScienceDirect articles.

--- a/frontend/daily-recommendations.html
+++ b/frontend/daily-recommendations.html
@@ -278,6 +278,132 @@
             </div>
         </section>
 
+        <!-- Health News Section -->
+        <section class="health-news-section">
+            <div class="section-container">
+                <div class="section-title-wrapper">
+                    <h2 class="section-title">Latest Health News</h2>
+                    <p class="section-subtitle">Stay informed with the latest nutrition and wellness research</p>
+                </div>
+                
+                <div class="news-grid">
+                    <div class="news-card">
+                        <div class="news-image">
+                            <i class="fas fa-heartbeat"></i>
+                        </div>
+                        <div class="news-content">
+                            <div class="news-category">Cardiovascular Health</div>
+                            <h3 class="news-title">New Study Shows Mediterranean Diet Reduces Heart Disease Risk</h3>
+                            <p class="news-summary">Recent research confirms that following a Mediterranean diet pattern can significantly reduce cardiovascular disease risk in older adults.</p>
+                            <div class="news-meta">
+                                <span class="news-date">October 3, 2024</span>
+                                <span class="news-source">Mayo Clinic</span>
+                            </div>
+                            <a href="https://www.mayoclinic.org/healthy-lifestyle/nutrition-and-healthy-eating/in-depth/mediterranean-diet/art-20047801" target="_blank" class="news-link">
+                                <i class="fas fa-external-link-alt"></i>
+                                Read Full Article
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="news-card">
+                        <div class="news-image">
+                            <i class="fas fa-brain"></i>
+                        </div>
+                        <div class="news-content">
+                            <div class="news-category">Brain Health</div>
+                            <h3 class="news-title">Omega-3 Fatty Acids Linked to Better Cognitive Function</h3>
+                            <p class="news-summary">A comprehensive study reveals that regular consumption of omega-3 rich foods may help maintain cognitive abilities as we age.</p>
+                            <div class="news-meta">
+                                <span class="news-date">October 1, 2024</span>
+                                <span class="news-source">Mayo Clinic</span>
+                            </div>
+                            <a href="https://www.mayoclinic.org/drugs-supplements-fish-oil/art-20364810" target="_blank" class="news-link">
+                                <i class="fas fa-external-link-alt"></i>
+                                Read Full Article
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="news-card">
+                        <div class="news-image">
+                            <i class="fas fa-bone"></i>
+                        </div>
+                        <div class="news-content">
+                            <div class="news-category">Bone Health</div>
+                            <h3 class="news-title">Vitamin D and Calcium: Essential for Senior Bone Strength</h3>
+                            <p class="news-summary">New guidelines emphasize the importance of adequate vitamin D and calcium intake for preventing osteoporosis in older adults.</p>
+                            <div class="news-meta">
+                                <span class="news-date">September 28, 2024</span>
+                                <span class="news-source">Mayo Clinic</span>
+                            </div>
+                            <a href="https://www.mayoclinic.org/healthy-lifestyle/adult-health/in-depth/bone-health/art-20045060" target="_blank" class="news-link">
+                                <i class="fas fa-external-link-alt"></i>
+                                Read Full Article
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="news-card">
+                        <div class="news-image">
+                            <i class="fas fa-leaf"></i>
+                        </div>
+                        <div class="news-content">
+                            <div class="news-category">Nutrition</div>
+                            <h3 class="news-title">Plant-Based Proteins Show Benefits for Aging Muscles</h3>
+                            <p class="news-summary">Research suggests that incorporating more plant-based proteins can help maintain muscle mass and strength in seniors.</p>
+                            <div class="news-meta">
+                                <span class="news-date">September 25, 2024</span>
+                                <span class="news-source">Mayo Clinic</span>
+                            </div>
+                            <a href="https://www.mayoclinic.org/healthy-lifestyle/nutrition-and-healthy-eating/basics/nutrition-basics/hlv-20049477" target="_blank" class="news-link">
+                                <i class="fas fa-external-link-alt"></i>
+                                Read Full Article
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="news-card">
+                        <div class="news-image">
+                            <i class="fas fa-moon"></i>
+                        </div>
+                        <div class="news-content">
+                            <div class="news-category">Sleep Health</div>
+                            <h3 class="news-title">Sleep Quality Improves with Evening Meal Timing</h3>
+                            <p class="news-summary">A new study finds that eating dinner earlier and avoiding late-night snacks can significantly improve sleep quality in older adults.</p>
+                            <div class="news-meta">
+                                <span class="news-date">September 22, 2024</span>
+                                <span class="news-source">Mayo Clinic</span>
+                            </div>
+                            <a href="https://diet.mayoclinic.org/us/blog/2022/healthy-habits-for-a-better-night-s-sleep/" target="_blank" class="news-link">
+                                <i class="fas fa-external-link-alt"></i>
+                                Read Full Article
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="news-card">
+                        <div class="news-image">
+                            <i class="fas fa-users"></i>
+                        </div>
+                        <div class="news-content">
+                            <div class="news-category">Social Health</div>
+                            <h3 class="news-title">Social Dining Enhances Nutritional Intake</h3>
+                            <p class="news-summary">Research confirms that eating meals with others leads to better nutrition choices and improved overall health outcomes.</p>
+                            <div class="news-meta">
+                                <span class="news-date">September 20, 2024</span>
+                                <span class="news-source">ScienceDirect</span>
+                            </div>
+                            <a href="https://www.sciencedirect.com/science/article/pii/S019566632400388X" target="_blank" class="news-link">
+                                <i class="fas fa-external-link-alt"></i>
+                                Read Full Article
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Quick Tips Section -->
         <section class="quick-tips-section">
             <div class="section-container">
